--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
-$font-family-main: 'Lato', Helvetica, Arial, sans-serif;
-$font-family-headings: 'Abril Fatface', Georgia, serif, cursive;
+$font-family-main: Helvetica, Arial, sans-serif;
+$font-family-headings: Helvetica, Arial, sans-serif;
 $font-size: 1.25em;
 
 // Padding
